Reservation statistics added